# omg-idl-parser-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: idl.lalrpop  lib.rs
